# HueSurf

./: .gitignore  BUILD.md  LICENSE  MANIFEST_ALIGNMENT_COMPLETE.md  README.md  TODO  WALLPAPER_SYSTEM_COMPLETE.md
assets/: blud.txt
assets/Wallpapers/Indiana/: pack_info.json
assets/Wallpapers/Star/: pack_info.json
config/: custom_args.gn
patches/: 001-huesurf-branding.patch  002-wallpaper-manager.patch  README.md
scripts/: WALLPAPER_PACKER_README.md  build.sh  demo-build.sh  demo_wallpapers.py  pack.sh  pack_wallpapers.py  requirements_packer.txt  validate_manifest.py
website/: README.md  app.py  passenger_wsgi.py
website/static/wallpapers/: manifest.json
website/templates/: about.html  base.html  download.html  features.html  index.html  wallpapers.html
